k8s/templates/billingservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hw7-billingservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw7-billingservice
  template:
    metadata:
      labels:
        app: hw7-billingservice
    spec:
      containers:
        - name: hw7-billingservice
          image: dmitriyburets1982/hw7-billingservice:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /billingservice/health
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /billingservice/health
              port: 8080
            initialDelaySeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hw7-billingservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: hw7-billingservice
  ports:
  - name: hw7-billingservice
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hw7-billingservice-service
spec:
  type: NodePort
  selector:
    app: hw7-billingservice
  ports:
    - name: hw7-billingservice
      protocol: TCP
      port: 80
      targetPort: 8080
