k8s/templates/notificationservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hw7-notificationservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw7-notificationservice
  template:
    metadata:
      labels:
        app: hw7-notificationservice
    spec:
      containers:
        - name: hw7-notificationservice
          image: dmitriyburets1982/hw7-notificationservice:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /notificationservice/health
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /notificationservice/health
              port: 8080
            initialDelaySeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hw7-notificationservice-service
spec:
  type: NodePort
  selector:
    app: hw7-notificationservice
  ports:
    - name: hw7-notificationservice
      protocol: TCP
      port: 80
      targetPort: 8080
