k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw7-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /billingservice
            pathType: Prefix
            backend:
              service:
                name: hw7-billingservice-service
                port:
                  number: 80
          - path: /orderservice
            pathType: Prefix
            backend:
              service:
                name: hw7-orderservice-service
                port:
                  number: 80
          - path: /notificationservice
            pathType: Prefix
            backend:
              service:
                name: hw7-notificationservice-service
                port:
                  number: 80
